# archapi

./: .gitignore  LICENSE  README.md  pyproject.toml
archapi/: README.md  __init__.py  cli.py  core.py  types.py
archapi/frameworks/: README.md  base.py  detector.py  django_drf_adapter.py  fastapi_adapter.py  flask_adapter.py  generic.py  registry.py
archapi/frameworks/express_ts/: README.md  adapter.py
archapi/frameworks/nestjs/: __init__.py  adapter.py
archapi/generation/: README.md
archapi/genome/: README.md
archapi/indexing/: README.md  cache.py
archapi/llm/: __init__.py  base.py  errors.py  openai_provider.py  prompt_builder.py  response_parser.py
archapi/mapping/: README.md
archapi/planning/: README.md  intent_planner.py  task_dag.py
archapi/scanner/: README.md
archapi/security/: README.md  context_redactor.py  policy_gate.py  secret_scanner.py
archapi/validation/: README.md  architecture_score.py  basic_validators.py  command_validator.py
docs/: ARCHITECTURE.md  DEVELOPMENT_STATUS.md  FILE_GUIDE.md  GITHUB_QUICKSTART.md  HOW_TO_RUN.md  LLM_USAGE.md  SECURITY_MEASURES.md
examples/: README.md  test_archapi_final.py  test_archapi_library.py  test_archapi_v02.py  test_archapi_v03_fastapi.py
fastapi_basic/: requirements.txt
fastapi_basic/app/routers/: user_router.py
fastapi_basic/app/schemas/: user_schema.py
fastapi_basic/app/services/: user_service.py
fastapi_basic/tests/: test_user.py
sample_projects/: README.md
sample_projects/express_basic/: README.md  package.json
sample_projects/express_basic/src/controllers/: user.controller.ts
sample_projects/express_basic/src/middleware/: auth.middleware.ts
sample_projects/express_basic/src/routes/: user.routes.ts
sample_projects/express_basic/src/schemas/: user.schema.ts
sample_projects/express_basic/src/services/: user.service.ts
sample_projects/express_basic/tests/: user.test.ts
sample_projects/fastapi_basic/: README.md
sample_projects/fastapi_basic/app/routers/: user_router.py
sample_projects/fastapi_basic/app/schemas/: user_schema.py
sample_projects/fastapi_basic/app/services/: user_service.py
sample_projects/fastapi_basic/tests/: test_user.py
sample_projects/flask_basic/: README.md
scripts/: README.md  fix_archapi_repo.sh  run_tests.sh  test_openai_llm.sh
tests/: README.md  test_archapi_suite.py
