[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archapi"
version = "0.4.0"
description = "Architecture-preserving REST API synthesis library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Rohith Chikkala" }
]
dependencies = ["certifi>=2024.0.0"]
keywords = ["rest-api", "code-generation", "architecture", "express", "fastapi"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/rohith5005/archapi"
Repository = "https://github.com/rohith5005/archapi"
Issues = "https://github.com/rohith5005/archapi/issues"
PyPI = "https://pypi.org/project/archapi/"

[tool.setuptools.packages.find]
include = ["archapi*"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
